<resources>
    <string name="app_name">Rose Status Saver</string>

    <!-- Ads log strings -->
    <string name="adClosed">onAdClosed: Ad closed</string>
    <string name="adFailedToLoad">onAdFailedToLoad : Failed to load Ad, Error code is: %d</string>
    <string name="adLeftApplication">onAdLeftApplication: Ad left the App</string>
    <string name="adLoaded">onAdLoaded: Ad loading…</string>
    <string name="adOpened">onAdOpened: Ad opening… user tap or click the ad</string>

    <!-- Ads key strings -->
    <string name="banner_ad_app_id">ca-app-pub-0672688958454166~1575550090</string>
    <string name="banner_ad_unit_id">ca-app-pub-0672688958454166/9041948903</string>
    <string name="start_app_id">205889906</string>

    <!-- Settings strings -->
    <string name="button_about">buttonVersion</string>
    <string name="button_change_view">buttonChangeView</string>
    <string name="button_clear_caches">buttonClearCaches</string>
    <string name="button_dark_mode">buttonDarkMode</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_layout_view">App Layout View</string>
    <string name="settings_category_theme">Theme</string>
    <string name="summary_dark_mode">Change theme to night mode</string>
    <string name="summary_light_mode">Change theme to day mode</string>
    <string name="title_cache">Clear Caches</string>
    <string name="title_change_view">Change Layout View</string>
    <string name="title_dark_mode">Dark Theme</string>
    <string name="title_light_mode">Light Theme</string>
    <string name="title_settings">Settings</string>
    <string name="title_version">App Version</string>

    <!-- AhmerActivity strings -->
    <string name="email_gmail_ahmer"><a href="mailto:ahmerafzal1@gmail.com">ahmerafzal1@gmail.com</a></string>
    <string name="email_live_sajjad"><a href="mailto:sajjad.bhutta@live.com">sajjad.bhutta@live.com</a></string>
    <string name="email_yahoo_ahmer"><a href="mailto:ahmerafzal@yahoo.com">ahmerafzal@yahoo.com</a></string>
    <string name="email_yahoo_sajjad"><a href="mailto:sajjad.bhutta@yahoo.com">sajjad.bhutta@yahoo.com</a></string>
    <string name="graph_link_facebook_ahmer">https://graph.facebook.com/100025917301113/picture?width=512&amp;height=512</string>
    <string name="graph_link_facebook_sajjad">https://graph.facebook.com/1297307759/picture?width=512&amp;height=512</string>
    <string name="graph_link_twitter_ahmer">https://twitter.com/mrahmerafzal/profile_image?size=original</string>
    <string name="graph_link_twitter_sajjad">https://twitter.com/sajjadbhutta6/profile_image?size=original</string>
    <string name="heading_app_developed_by">App Developed By</string>
    <string name="heading_meet_on_social">Meet on Social Media and Web</string>
    <string name="id_facebook_ahmer">Mr.AhmerAfzal</string>
    <string name="id_facebook_sajjad">Sajjad.Hussain9211</string>
    <string name="id_github_ahmer">AhmerAfzal1</string>
    <string name="id_instagram_sajjad">sajjad.bhutta.11</string>
    <string name="id_qq_ahmer">180989639</string>
    <string name="id_qq_sajjad">2766805148</string>
    <string name="id_twitter_ahmer">MrAhmerAfzal</string>
    <string name="id_twitter_sajjad">SajjadBhutta211</string>
    <string name="title_email">Email:</string>
    <string name="title_name">Name:</string>
    <string name="title_name_ahmer_afzal">Ahmer Afzal</string>
    <string name="title_name_sajjad_bhutta">Sajjad Hussain Bhutta</string>
    <string name="title_qq">QQ ID:</string>
    <string name="url_blogspot_ahmer">http://ahmerafzal1.blogspot.com/</string>
    <string name="url_facebook">https://www.facebook.com/</string>
    <string name="url_github">https://github.com/</string>
    <string name="url_instagram">http://instagram.com/</string>
    <string name="url_twitter">https://mobile.twitter.com/</string>
    <string name="text_copied">Text is Copied</string>

    <!-- Email strings -->
    <string name="auto_generate_msg">*** This is an automatically generated message. ***</string>
    <string name="email_ahmer_gmail">ahmerafzal1@gmail.com</string>
    <string name="email_ahmer_yahoo">ahmerafzal@yahoo.com</string>
    <string name="send_email_to_author">Send E-Mail to Ahmer Afzal</string>
    <string name="no_email_client">There are no E-Mail client found</string>

    <!-- Miscellaneous strings -->
    <string name="empty_description">Empty content description</string>
    <string name="no_having_status">There is currently no content for download</string>
    <string name="no_whatsapp_installed">WhatsApp not installed</string>
    <string name="period">●</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="share_to_whatsapp">Share to WhatsApp</string>
    <string name="splash_title">Rose WhatsApp \nStatus Saver</string>
    <string name="status_saved">Status have been successfully saved to: </string>
    <string name="tab_text_1">Images</string>
    <string name="tab_text_2">Videos</string>
    <string name="title_activity_main_tabbed">MainTabbedActivity</string>
    <string name="no_internet_connection">Please check your Internet connection</string>
    <string name="update_app_server_not_found">Server not found</string>

</resources>
